Don't ignore keys just because xkey.state != 0
Any keys pressed while e.g. NumLock is active have non-zero state.
Combinations like Alt+Tab will never be received by this program anyway
because they'll be intercepted by the window manager. So it is only
necessary to ignore the press of the Alt itself, not of the Tab with
non-zero state.

--- a/README
+++ b/README
@@ -19,3 +19,7 @@ Compiling and installing:
 
 Highscore is stored in a file ".xflappy-highscore" in the current user's home
 directory. To reset the highscore, simply delete that file.
+
+Note that when the program says to press "any key" in a menu, this excludes
+some modifier keys such as Ctrl, Alt, or Shift. This is for avoiding that
+window manager commands like Alt+Tab start a new game.
